fix: admin and user orders functionality
